# fasttp

./: Makefile.am  autogen.sh  configure.ac  version.sh
fasttp-client/: Makefile.am
fasttp-client/src/: fasttp-client.cpp
fasttp-lib/: Makefile.am
fasttp-lib/include/fasttp/: fasttp.h
fasttp-lib/src/: fasttp.cpp
fasttp-server/: Makefile.am
fasttp-server/src/: fasttp-server.cpp
